[package]
name = "replacetag"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replacetag_sys = { path = "../replacetag_sys" }

[[examples]]
name = "main"
path = "examples/main.rs"